tests/ui/const-generics/adt_const_params/const_param_ty_impl_no_structural_eq.stderr
error[E0277]: the type `CantParam` does not `#[derive(Eq)]`
  --> $DIR/const_param_ty_impl_no_structural_eq.rs:10:36
   |
LL | impl std::marker::ConstParamTy for CantParam {}
   |                                    ^^^^^^^^^ the trait `StructuralEq` is not implemented for `CantParam`
   |
note: required by a bound in `ConstParamTy`
  --> $SRC_DIR/core/src/marker.rs:LL:COL

error[E0277]: the type `CantParamDerive` does not `#[derive(Eq)]`
  --> $DIR/const_param_ty_impl_no_structural_eq.rs:13:10
   |
LL | #[derive(std::marker::ConstParamTy)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `StructuralEq` is not implemented for `CantParamDerive`
   |
note: required by a bound in `ConstParamTy`
  --> $SRC_DIR/core/src/marker.rs:LL:COL
   = note: this error originates in the derive macro `std::marker::ConstParamTy` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
